(PC-33527)[PRO] fix: CheckboxGroup gap between items

--- a/pro/src/ui-kit/form/CheckboxGroup/CheckboxGroup.module.scss
+++ b/pro/src/ui-kit/form/CheckboxGroup/CheckboxGroup.module.scss
@@ -3,9 +3,10 @@
 .checkbox-group {
   display: flex;
   flex-direction: column;
-  gap: rem.torem(16px);
+  gap: rem.torem(8px);
 }
 
 .inline {
   flex-flow: row wrap;
+  gap: rem.torem(16px);
 }
